# 2042-WallerCreek24

./: .gitignore  notes.txt
FusionAddIns/: .gitignore
FusionAddIns/ExportSpline/: ExportSpline.manifest
FusionAddIns/ExportSpline/commands/: __init__.py
FusionAddIns/ExportSpline/output/: option5_spline.json
InstallationDemo/: .gitignore
InstallationDemo/Assets/: packages.config  rValues.json
InstallationDemo/Assets/Config/: option5_spline.json  option69_spline.json  option6_spline.json  option70_spline.json  version73.json  version76.json  version77.json  version78_tspline.json
InstallationDemo/Assets/Manufacturing/: assembly_manifest.xlsx  white_values.xlsx
InstallationDemo/Assets/Materials/: Fish.mat  FishShader.shader  Water.mat
InstallationDemo/Assets/Prefabs/: BaseFish.prefab  InitialShapeOption1.prefab  OptimizedFish.prefab  Option1Optimized.prefab  Option2.prefab  Option2Optimized.prefab  Option3Optimized.prefab  Option5.prefab  Option5Optimized.prefab  Option69Optimized.prefab  Option6Optimized.prefab  Option70Optimized.prefab  Option72Optimized.prefab  Version73.prefab  Version76.prefab  Version77.prefab  Version78.prefab  WTFOption69.prefab
InstallationDemo/Assets/Scenes/: Option6.unity  Option72.unity  Version73.unity
InstallationDemo/Assets/Scripts/: BoundingVolumeFinal.cs  Config.cs  Effect.cs  FishFinal.cs  FishStringFinal.cs  FlybyCamera.cs  ForceRenderRate.cs  FusionSplineFinal.cs  GenerationUtils.cs  InstallationConfig.cs  InstallationController.cs  InstallationEffects.cs  InstallationFinal.cs  InstallationUi.cs  LayoutFinal.cs  RuntimeUtils.cs  ScaffoldingSectionFinal.cs  TSplineFinal.cs  Utils.cs  Wave.cs
InstallationDemo/Assets/Shaders/: DefaultShader.shader  WaterShader.shader  WaterShaderMaterial.mat
InstallationDemo/Assets/UI Toolkit/: InstallationControls.uss  (+2 more)
InstallationDemo/ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset
Interaction/InteractionWiFiDesktop/: forge.env.d.ts  index.html  package-lock.json  package.json  tsconfig.json
Interaction/InteractionWiFiEmbedded/: CMakeLists.txt
Lamp/: notes.txt
Lamp/LampBoard/: LampBoard.kicad_prl  LampBoard.kicad_pro  LampBoard.kicad_sch
Lamp/LampBoardDesk/: LampBoardDesk.kicad_pcb  LampBoardDesk.kicad_prl  LampBoardDesk.kicad_pro  LampBoardDesk.kicad_sch  fp-info-cache
Lamp/LampBoardModule/: LampBoardModule.kicad_pcb  LampBoardModule.kicad_prl  LampBoardModule.kicad_pro  LampBoardModule.kicad_sch  fp-info-cache
Lamp/LampCode/: Cargo.toml  rust-toolchain.toml
Lamp/LampCode/.cargo/: config.toml
Lamp/LampCode/src/: button.rs  color.rs  common.rs  encoder.rs  lib.rs  lights.rs  main.rs  manager.rs  mode.rs  store.rs  switch.rs  walker.rs
Receiver/ReceiverBoard/: ISSUELOG.md  ReceiverBoard.kicad_pcb  ReceiverBoard.kicad_pro  ReceiverBoard.kicad_sch  ~ReceiverBoard.kicad_sch.lck
Receiver/ReceiverCode/: .gitignore  platformio.ini
(+91 files in other folders)
