[package]
name = "lamp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.1", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.2.0" }

assign-resources = { version = "0.4.1" }


defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
libm = "0.2.11"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
postcard = { version = "1.0.10"}

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
smart-leds = "0.4.0"
heapless = "0.8"
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
embedded-storage-async = "0.4.1"
static_cell = "2.1"
portable-atomic = { version = "1.9", features = ["critical-section", "serde"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
num-integer = { version = "0.1.46", default-features = false}

sequential-storage = { version = "4.0.0", features = ["defmt-03"]}

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-sync = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-executor = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-time = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-rp = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-usb = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-futures = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }
embassy-usb-logger = { git = "https://github.com/broose-goose/embassy", branch = 'pio-ws2812-rgba' }